Improve home page text and add CSS helper to prevent undesirable wrapping

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "**/*";
+
+// Helper to prevent undesirable wrapping
+.nowrap {
+  white-space: nowrap;
+}
